--- a/index.html
+++ b/index.html
@@ -2,4 +2,13 @@
 <html>
   <head>
     <title>HutsMaxim website</title>
- 
+  </head>
+
+  <body>
+    <h1>Welkom op mijn website!</h1>
+    
+
+  </body>
+
+
+</html>
