--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>HutsMaxim website</title>
   </head>
+  <body style="background-color:orange;">
 
   <body>
     <h1>Welkom op mijn website!</h1>
