--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>HutsMaxim website</title>
-  </head>
-  <body style="background-color:orange;">
-
-  <body>
-    <h1>Welkom op mijn website!</h1>
-    <h2>Kaas is lekker daarom ben je hier toch?</h2>
-    
-
-  </body>
-
-
-</html>
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
