--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Welkom op mijn website!</h1>
     <h2>Kaas is lekker daarom ben je hier toch?</h2>
+    <p ="About W3Schools">W3Schools is a web developer's site.</p>
     
 
   </body>
