--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <h1>Welkom op mijn website!</h1>
     <h2>Kaas is lekker daarom ben je hier toch?</h2>
     <div>Ik ben Maxim!</div>
+
+    <button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
+
+<p id="demo"></p>
     
 
   </body>
