--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 onclick="document.getElementById('demo').innerHTML = Date()">
 Click me to display Date and Time.</button>
 
+<h1 style="background-color:DodgerBlue;">Hello World</h1>
+<p style="background-color:Tomato;">Lorem ipsum...</p>
 
 <p id="demo"></p>
-    
+
 
   </body>
 
