--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body style="background-color:orange;">
 
   <body>
-    <h1>Welkom op mijn website!</h1>
+    <h1 style="background-color:DodgerBlue;">Welkom op mijn website!</h1>
     <h2>Kaas is lekker daarom ben je hier toch?</h2>
     <div>Ik ben Maxim!</div>
 
