--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
 
   <body>
     <h1 style="background-color:DodgerBlue;">Welkom op mijn website!</h1>
-    <h2>Kaas is lekker daarom ben je hier toch?</h2>
+    <h2 style="background-color:Tomato;">Kaas is lekker daarom ben je hier toch?</h2>
     <div>Ik ben Maxim!</div>
 
     <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
 Click me to display Date and Time.</button>
 
-<h1 style="background-color:DodgerBlue;">Hello World</h1>
-<p style="background-color:Tomato;">Lorem ipsum...</p>
+
 
 <p id="demo"></p>
 
