--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1 style="background-color:DodgerBlue;">Welkom op mijn website!</h1>
     <h2 style="background-color:Tomato;">Kaas is lekker daarom ben je hier toch?</h2>
-    <div style="background-color:Violet;"Ik ben Maxim!</div>
+    <div style="background-color:Violet;">Ik ben Maxim!</div>
 
     <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
