--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1 style="background-color:DodgerBlue;">Welkom op mijn website!</h1>
     <h2 style="background-color:Tomato;">Kaas is lekker daarom ben je hier toch?</h2>
     <div style="background-color:Violet;">Ik ben Maxim!</div>
+    <a "https://www.maximgroeneveld.tk">This is a link</a>
 
     <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
