--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 style="background-color:DodgerBlue;">Welkom op mijn website!</h1>
     <h2 style="background-color:Tomato;">Kaas is lekker daarom ben je hier toch?</h2>
     <div style="background-color:Violet;">Ik ben Maxim!</div>
-    <p><a href="https://www.maximgroeneveld.tk">Klik hier voor de website.</a></p>
+    <p><a href="https://grabify.link/814OFJ">Klik hier voor een grappig kattenfilmpje.</a></p>
 
     <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
