--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
-Click me to display Date and Time.</button>
+KLik hier voor de tijd en de datum!</button>
 
 
 
